2009-03-14  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot-ja.doc docs/term-ja.diff docs/README.ja man/gnuplot-ja.1:
	Sync Japanese documentation to gnuplot.doc rev 1.562

2009-03-14  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.in: Explicitly include $LUA_CFLAGS as reported by pkgconfig.
	Bug #2637549

2009-03-12  Ethan A Merritt  <merritt@u.washington.edu>

	* src/fit.c (fit_command): Replace bogus initialization of dummy_token[]
	with explicit declaration.  Bug #2657599 

	* src/datafile.c (df_set_key_columnhead) src/datafile.h src/plot2d.c
	src/plot3d.c docs/gnuplot.doc demo/datastrings.dem demo/histograms.dem
	demo/histograms2.dem:

	Document the plot option "... title columnhead{(N)}"
	Move the point where this option is parsed from df_open() to 
	eval_{3d}plots() with the rest of the title options, using a callback
	to a new routine df_set_key_columnhead().  Deprecate the original form
	of the command, "using N title N", which was undocumented but used in
	several demos.  The deprecated syntax is still accepted if configured
	with --enable-backwards-compatibility.

2009-03-11  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graph3d.c: Bracket the code that draws 3D grid lines with calls to
	term->layer(TERM_LAYER_BEGIN_GRID) and term->layer(TERM_LAYER_END_GRID).

	* term/js/gnuplot_mouse.css term/js/prevzoom.png term/js/nexzoom.png
	term/js/help.png:  Additional icons for the canvas driver.

	* src/graph3d.c (do_3dplot): Define the clipping area in 3D plots to lie
	between the left-most and right-most graph box edges. This is a change!
	The intent is to allow the canvas terminal to use the plot's BoundingBox
	as a zoom region.  If it causes problems for other terminals, we will
	need to create and use a separate BoundingBox for this purpose.

2009-03-05  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c: Fix assignment of fill patterns to plot boxes and key
	for columnstacked histograms.  Bug #2664732
